// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/FileEditor/FileEditor > Editor > shows Error when loading failed 1`] = `
<div
  class="FileEditor-tab FileEditor-active"
>
  <div>
    <div
      id="error"
    />
  </div>
</div>
`;

exports[`components/FileEditor/FileEditor > Editor > shows Skeleton while loading data 1`] = `
<div
  class="FileEditor-tab FileEditor-active"
>
  <div
    id="Skeleton"
  />
</div>
`;

exports[`components/FileEditor/FileEditor > Editor > shows TextEditor 1`] = `
<div
  class="FileEditor-tab FileEditor-active"
>
  <div
    id="Text Editor"
  >
    <span
      id="initialValue"
    >
      body
    </span>
  </div>
</div>
`;

exports[`components/FileEditor/FileEditor > Editor > shows an empty TextEditor 1`] = `
<div
  class="FileEditor-tab FileEditor-active"
>
  <div
    id="Text Editor"
  >
    <span
      id="initialValue"
    />
  </div>
</div>
`;

exports[`components/FileEditor/FileEditor > Editor > shows skeleton when loadMode is not resolved yet 1`] = `
<div
  class="FileEditor-tab FileEditor-active"
  style="display: none;"
/>
`;
